plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.2'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
}

group = 'com.food'
version = '0.0.1-SNAPSHOT'
description = 'BitlabFood'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Web
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.3.0'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

    // JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Liquibase
    implementation 'org.liquibase:liquibase-core'

    // PostgreSQL JDBC
    runtimeOnly 'org.postgresql:postgresql'

    // Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Tests
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
    useJUnitPlatform()
    finalizedBy jacocoTestReport 
}

tasks.named('jacocoTestReport') {
    dependsOn test 
    reports {
        xml.required = true
        html.required = true
    }
}